--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
   <body>
     <div class="page">
       <header class="header">HELLO</header>
-      <main class="content"></main>
+
+      <main class="content">
+        <section class="Receta"></section>
+        <section class="reservar una mesa"></section>
+        <section class="contactos"></section>
+      </main>
+
       <footer class="footer"></footer>
     </div>
   </body>
