Agrego secciones dentro de <main> con clases descriptivas

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <header class="header">HELLO</header>
 
       <main class="content">
-        <section class="Receta"></section>
-        <section class="reservar una mesa"></section>
-        <section class="contactos"></section>
+        <section class="about"></section>
+        <section class="products"></section>
+        <section class="gallery"></section>
       </main>
 
       <footer class="footer"></footer>
