Agrego secciones descriptivas dentro de main

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <header class="header">HELLO</header>
 
       <main class="content">
+        <section class="hero"></section>
+        <section class="menu"></section>
         <section class="about"></section>
-        <section class="products"></section>
-        <section class="gallery"></section>
       </main>
 
       <footer class="footer"></footer>
