--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
       <header class="header">HELLO</header>
 
       <main class="content">
-        <section class="hero"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section class="recipes"></section>
+        <section class="reservation"></section>
       </main>
 
       <footer class="footer"></footer>
