--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Laura Rodríguez" />
     <meta
       name="keywords"
-      content="cafetería, café, pasteles, acogedor, postres , relax"
+      content="cafetería, café, pasteles, acogedor, postres, relax"
     />
     <title>Rincón del café</title>
 
@@ -25,13 +25,101 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <div class="page">
-      <header class="header">HELLO</header>
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Logotipo del Rincón del Café"
+            class="nav__logo"
+          />
+          <ul class="nav__links">
+            <li><a href="recipes" class="nav__link">Recetas</a></li>
+            <li>
+              <a href="reservation" class="nav__link">Reservar una mesa</a>
+            </li>
+            <li><a href="events" class="nav__link">Contactos</a></li>
+          </ul>
+        </nav>
+
+        <h1 class="header__title">
+          <span class="header__span-accent">Café de especialidad </span>
+          <br />en Triple Peaks
+        </h1>
+
+        <p class="header__description">
+          ¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
+          para darte energía y motivar tu creatividad.
+        </p>
+
+        <img
+          src="./images/inside_coffee_shop.png"
+          alt="Imagen cafetería"
+          class="header__image"
+        />
+
+        <div class="header__footer">
+          <div>
+            <p class="header__paragraph">Horario:</p>
+            <p class="header__paragraph">
+              Lunes a Viernes (de 10:00h a 19:00h)
+            </p>
+            <p class="header__paragraph">
+              Sábados y Domingos (de 11:00h a 18:00h)
+            </p>
+          </div>
+          <p class="header__paragraph">
+            Avenida del Éxito 200, Ciudad Triple Peaks
+          </p>
+        </div>
+      </header>
 
       <main class="content">
-        <section class="recipes"></section>
-        <section class="reservation"></section>
+        <section class="recipes" id="recipes">
+          <h2 class="recipes__title">Nuestras recetas</h2>
+          <h3 class="recipes__subtitle">
+            Echa un vistazo a las recetas que hemos reunido para que elabores
+            tus propios snacks.
+          </h3>
+
+          <div class="recipes__videos">
+            <div class="recipes__video-item">
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=RbiIQh_IjZgil1ve"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+
+              <ul class="recipes__video-caption">
+                <li>Receta en Aeropress</li>
+                <li>~5 min</li>
+              </ul>
+            </div>
+
+            <div class="recipes__video-item">
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=neamGP5KVH1RnvjU"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+
+              <ul class="recipes__video-caption">
+                <li>Receta en cafetera francesa</li>
+                <li>~15 min</li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
+        <section class="reservation" id="reservation"></section>
       </main>
 
       <footer class="footer"></footer>
