--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             class="nav__logo"
           />
           <ul class="nav__links">
-            <li><a href="recipes" class="nav__link">Recetas</a></li>
+            <li><a href="#recipes" class="nav__link">Recetas</a></li>
             <li>
-              <a href="reservation" class="nav__link">Reservar una mesa</a>
+              <a href="#reservation" class="nav__link">Reservar una mesa</a>
             </li>
-            <li><a href="events" class="nav__link">Contactos</a></li>
+            <li><a href="#events" class="nav__link">Contactos</a></li>
           </ul>
         </nav>
 
