--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     />
     <title>Rincón del café</title>
 
-    <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
 
@@ -159,7 +158,7 @@
                 />
               </label>
 
-              <label class="form__label" for="correoElectrónico">
+              <label class="form__lab el" for="correoElectrónico">
                 Tu correo electrónico
                 <input
                   class="form__input"
@@ -189,7 +188,43 @@
           </form>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__circle"></div>
+        <div class="footer__content">
+          <div class="footer__logo">
+            <img
+              src="./images/logo_coffeeshop_light.svg"
+              alt="Triple Espresso"
+            />
+          </div>
+          <div class="footer__social">
+            <h3 class="footer__social-heading">Redes sociales</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a class="footer__social-link" href="#" target="_blank">
+                  <img
+                    src="./images/facebook_white.svg"
+                    alt="Facebook"
+                    class="footer__social-icon"
+                  />
+                  Facebook
+                </a>
+              </li>
+              <li class="footer__list-item">
+                <a class="footer__social-link" href="#" target="_blank">
+                  <img
+                    src="./images/instagram_white.svg"
+                    alt="Instagram"
+                    class="footer__social-icon"
+                  />
+                  Instagram
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">© 2025 Laura Rodríguez</p>
+      </footer>
     </div>
   </body>
 </html>
